# ChangeLog for dev-libs/libxml2
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.212 2008/05/27 15:35:19 remi Exp $

*libxml2-2.6.32 (27 May 2008)

  27 May 2008; Rémi Cardona <remi@gentoo.org> +libxml2-2.6.32.ebuild:
  bump to 2.6.32, mostly bugfixes, no major new features

  13 Apr 2008; Kenneth Prugh <ken69267@gentoo.org> libxml2-2.6.31.ebuild:
  amd64 stable, bug #217398

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> libxml2-2.6.31.ebuild:
  Stable on ppc64; bug #217398

  12 Apr 2008; Raúl Porcel <armin76@gentoo.org> libxml2-2.6.31.ebuild:
  alpha/ia64/sparc/x86 stable wrt #217398

  12 Apr 2008; Jeroen Roovers <jer@gentoo.org> libxml2-2.6.31.ebuild:
  Stable for HPPA (bug #217398).

  12 Apr 2008; nixnut <nixnut@gentoo.org> libxml2-2.6.31.ebuild:
  Stable on ppc wrt bug 217398

  09 Mar 2008; Mart Raudsepp <leio@gentoo.org>
  -files/libxml2-2.6.27-tar_in_tests.patch, -libxml2-2.6.28.ebuild,
  -libxml2-2.6.29.ebuild, -libxml2-2.6.30.ebuild:
  Remove security vulnerable old versions

*libxml2-2.6.31 (28 Feb 2008)

  28 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libxml2-2.6.31.ebuild:
  bump to 2.6.31 and add examples use flag per bug #111508

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  libxml2-2.6.30-r1.ebuild:
  Since libxml2 will never get pulled into stage2, change the check to be more
  accurate by checking ROOT, instead. Thanks to Andrew Gaffney
  <agaffney@gentoo.org> for pointing this out.

  05 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  libxml2-2.6.30-r1.ebuild:
  Added some code to skip the catalog generation on stage1/stage2, since we
  won't necessarily have xmlcatalog in the seed stage and libxml2 wouldn't get
  rebuilt until stage3, ending up with an empty catalog. This fixes bug
  #208887.

  11 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  libxml2-2.6.28.ebuild, libxml2-2.6.29.ebuild:
  Fix a few quoting issues
