@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxml2
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.212 2008/05/27 15:35:19 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.213 2008/06/26 09:05:31 remi Exp $
+
+  26 Jun 2008; Rémi Cardona <remi@gentoo.org> libxml2-2.6.32.ebuild:
+  download the correct testsuite tarball, see bug #229421
 
 *libxml2-2.6.32 (27 May 2008)
 
